--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,10 +2,10 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "websocket-template1"
+stack_name = "template-websocket-with-api"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1buqg7r2830lt"
-s3_prefix = "websocket-template1"
+s3_prefix = "template-websocket-with-api"
 region = "us-west-2"
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "AppBucketName=\"websocket-client1\""
+parameter_overrides = "BundleAppClientURL=\"https://raw.githubusercontent.com/Twenty-Four-7-Web-Dev/websocket-template/master/client/index.html\" BucketAppClientName=\"template-websocket-with-api\""
 
